Change white-space: pre to pre-wrap son really long lines wrap correctly.

--- a/developer/static/css/developer.css
+++ b/developer/static/css/developer.css
@@ -386,7 +386,7 @@
     background-color: #DFF0D8;
 }
 .offer-description p {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 
